<resources>
    <string name="app_name">Aalayam</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="alym_logo">Aalayam Logo</string>
    <string name="srvrprblm_tryagainlater">There are some server problem\nPlease try again later</string>
    <string name="there_seemsprblm_tryagainlater">Sorry, there seems to be a problem. Please try again.</string>
   	<string name="next_sml">next</string>
	<string name="address">Address</string>
	<string name="home">Home</string>
	<string name="alctd_area">Allocated areas</string>
	<string name="area">Area</string>
   	<string name="work">Work</string>
   	<string name="prsnl">Personal</string>
   	<string name="birthdate">Birthdate</string>
   	<string name="joindate">Joindate</string>
   	<string name="qualifctn">Qualification</string>
   	<string name="desgntn">Designation</string>
   	<string name="plan">Plan</string>
   	<string name="sittings">Sittings</string>
   	<string name="fees">Fees</string>
   	<string name="assgnd_to">Assigned to</string>
   	<string name="reasmnt">Reassessment</string>
   	<string name="symbl_rupee">\u20B9</string>
   	<string name="cancel_sml">Cancel</string>
   	<string name="add_sml">Add</string>
   	<string name="update_sml">Update</string>
   	<string name="and_all_sml">and</string>
   	<string name="and_symbl">&amp;</string>
   	<string name="plz_wait_3dot">Please wait&#8230;</string>
	<string name="wait_a_momnt">Wait a moment</string>
	<string name="refresh_sml">Refresh</string>
	<string name="save_sml">Save</string>
    <string name="plz_cntct_your_admin">Please contact your administrator</string>
    <string name="ok_caps">OK</string>
	<string name="imgcd_flaticon">Image of Flat Icons</string>
    <string name="imgcd_user">Image of User</string>
	<string name="imgcd_settings">Image of Settings</string>
   	<string name="imgcd_search">Image of Search</string>
   	<string name="imgcd_add">Image of Add</string>
	<string name="imgcd_back">Image of Back</string>
	<string name="imgcd_save_rightsign">Image of Save_rigtsign</string>
	<string name="imgcd_location">Image of Location</string>
	<string name="imgcd_phone">Image of Phone</string>
	<string name="imgcd_number">Image of Number</string>
	<string name="imgcd_email">Image of Email</string>
	<string name="imgcd_date">Image of Date</string>
	<string name="imgcd_qualifctn">Image of Qualification</string>
	<string name="imgcd_desgntn">Image of Designation</string>
	<string name="imgcd_plan">Image of Plan</string>
	<string name="imgcd_sittings">Image of Sittings</string>
	<string name="imgcd_fees">Image of Fees</string>
	<string name="imgcd_reasmntstatus">Image of Reassessment Status</string>
	<string name="imgcd_qrcode">Image of Qrcode</string>
	<string name="imgcd_emojies">Image of Emojies</string>
	<string name="powered_by">Powered by</string>
	<string name="jalotsav_dev">JALOTSAV Dev.</string>
	<string name="no_intrnt">No internet</string>
	<string name="no_intrnt_cnctn">No internet connection</string>
	<string name="plz_sure_youare_conctd">Please make sure that you are connected to the internet</string>
    <string name="login">Login</string>
    	<string name="dctr_login">Doctor Login</string>
    	<string name="signin_with_alym_acnt">Sign in with your Aalayam account.</string>
    	<string name="entr_your_email">Enter your email</string>
    	<string name="plz_entr_email">Please enter an email address</string>
    	<string name="invld_email_adrs_frmt">Invalid Email address format</string>
    	<string name="not_find_alym_acnt">Couldn\'t find your Aalayam Account. Try again.</string>
    	<string name="pswrd">Password</string>
    	<string name="frgt_pswrd_qstn">Forgot password?</string>
    	<string name="plz_entr_pswrd">Please enter your password</string>
    	<string name="pswrd_notmatch">The email and password that you entered \ndon\'t match</string>
    	<string name="close_sml">close</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
	<string name="powrby_sml">Powered by</string>
	<string name="dev_company_name">Jalotsav</string>
	<string name="loading_3dots_sml">Loading&#8230;</string>
		    <string-array name="navgndrawer_items_doctor">
		        <item >Dashboard</item>
		        <item >Patients</item>
		        <item >News</item>
		        <item >My Equipment</item>
		        <item >My Payments</item>
		        <item >My Profile</item>
		    </string-array>
			<string name="dashboard_sml">Dashboard</string>
			<string name="my_profile_sml">My Profile</string>
		    <string name="my_ptnts_sml">My Patients</string>
		    <string name="news_sml">News</string>
		    <string name="scan_qrcode">Scan QR Code</string>
		    <string name="my_eqpmnt_sml">My Equipments</string>
		    <string name="my_pymnts_sml">My Payments</string>
			<string name="oops_you_have_no_actvptnt">Oops&#8230;! You have no active patients</string>
			<string name="plz_load_ptnts_data_from_server">Please load patients initial data from Aalayam server</string>
	    	<string name="search_ptnt">Search patient</string>
	    	<string name="no_ptnt">No Patient</string>
	    	<string name="ptnt_not_match">Patient not match or Invalid code</string>
	    	<string name="news_dtls">News details</string>
	    	<string name="news_appearher">News appear here</string>
    		<string name="eqpmnt_appearher">Equipment appear here</string>
    		<string name="total_eqpmnt">Total Equipment</string>
    		<string name="qty_coln">Qty: </string>
    			<string name="eqpmnt_dtls">Equipment Details</string>
    			<string name="title">Title</string>
    			<string name="quantity">Quantity</string>
    			<string name="rate">Rate</string>
    			<string name="descrption">Description</string>
		    <string-array name="navgndrawer_items_patient">
		        <item >Dashboard</item>
		        <item >Patient Images</item>
		        <item >Patient Videos</item>
		        <item >Vas Scales</item>
		        <item >Payments</item>
				<item >Feedback</item>
		        <item >Patient Profile</item>
		    </string-array>
			<string name="case_images_sml">Case Images</string>
			<string name="profile_sml">Profile</string>
			<string name="vasscale_sml">Vas Scales</string>
			<string name="pymnts_sml">Payments</string>
			<string name="feedback_sml">Feedback</string>
			<string name="allow_permtn_gallery_camera">To select/capture photo, you must have to allow permission</string>
		    <string name="no_ptnt_images_onalmsrvr">No Patient images available on Aalayam server</string>
		    <string name="ptnt_images_appearher">Patient images appear here</string>
		    <string name="ptnt_images_inqueue">Patient images in queue</string>
		    <string name="ptnt_image_inqueue">Patient image in queue</string>
		    <string name="ptnt_image_uploaded">Patient image uploaded</string>
		    <string name="no_ptnt_case_images_onalmsrvr">No Patient case images available on Aalayam server</string>
		    <string name="ptnt_case_images_appearher">Patient case images appear here</string>
		    <string name="ptnt_case_images_inqueue">Patient case images in queue</string>
		    <string name="ptnt_case_image_inqueue">Patient case image in queue</string>
	    	<string name="vasscales_appearhere">Vas scales appear here</string>
	    		<string name="add_vasscale">Add Vas scale</string>
				<string name="vasscale_date_coln">Vasscale Date:</string>
				<string name="fill_crfly_later_not_edit_msg">Fill data carefully, Later you are not able to edit.</string>
	    		<string name="add_scale">Add scale</string>
				<string name="cs_sml">cs</string>
				<string name="cq_sml">cq</string>
	    		<string name="daily_payment">Daily payment</string>
	    		<string name="add_scale_questnmark">Add scale ?</string>
	    		<string name="add_scale_dialogmsg">Do you want to add scale with\nBefore scale: %1$d,\nAfter scale: %2$d and\nDaily payment %3$s\u20B9 by %4$s ?</string>
	    		<string name="vasscale_added_sucsfly">Vas scale details added successfully</string>
	    		<string name="update_vasscale">Update Vas scale</string>
	    		<string name="update_scale">Update scale</string>
	    		<string name="update_scale_questnmark">Update scale ?</string>
				<string name="update_scale_dialogmsg">Do you want to update scale with\nBefore scale: %1$d,\nAfter scale: %2$d and\nDaily payment %3$s\u20B9 by %4$s ?</string>
	    		<string name="vasscale_before_updated_sucsfly">Vas scale details for before updated successfully</string>
	    		<string name="vasscale_after_updated_sucsfly">Vas scale details for after updated successfully</string>
	    		<string name="vasscale_dtls">Vas scale details</string>
	    		<string name="ptnt_name">Patient name</string>
	    		<string name="scale_of_trtmnt">Scale of treatment</string>
	    		<string name="before_sml">Before</string>
	    		<string name="after_sml">After</string>
	    		<string name="date_sml">Date</string>
				<string name="dailypymnt_with_type_sml">%1$s(%2$s)</string>
    		<string name="ptnt_pymnthstry_appearher">Patient payments history appear here</string>
    		<string name="pymnt_id_coln">Payment id: </string>
    		<string name="total_fees">Total Fees</string>
    		<string name="total_recvd">Total Received</string>
    		<string name="total_due">Total Due</string>
    			<string name="pymnt_dtls">Payment Details</string>
    			<string name="amount">Amount</string>
    			<string name="date_coln_sml">Date: </string>
    			<string name="prtclr_sml">Particular</string>
			<string name="already_feedback_onserver">Feedback already submitted for this patient on Aalayam server.</string>
			<string name="office_premisses">Office Premisses</string>
			<string name="treatment_sml">Treatment</string>
			<string name="doctors_assistance">Doctor\'s Assistance</string>
			<string name="comments_sml">Comments</string>
			<string name="suggestn_sml">Suggestions</string>
			<string name="feedback_submit_success">Feedback submitted successfully</string>
			<string name="allow_permtn_to_call">To make call, you must have to allow permission</string>
    			<string name="case_dtls">Case Details</string>
    			<string name="case_dscrptn">Case Description</string>
    			<string name="diagns">Diagnosis</string>
				<string name="no_details_avalbl">No details available</string>
	<string name="pushntfy_ptnt_deflt_message">You have allocated new patients</string>
</resources>