<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cordntrlyot_ptnt_frgmnt_vasscale_addvasscale"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navgndrwer.patient.PaymentsDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Patient name & Previous Date-->
        <LinearLayout
            android:id="@+id/lnrlyot_ptnt_frgmnt_vasscale_addvasscale_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <!-- Patient Name -->
            <LinearLayout
                android:id="@+id/lntlyot_ptnt_frgmnt_vasscale_addvasscale_patntnm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_prmry"
                android:elevation="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/ptnt_name"
                    android:src="@drawable/ic_user_white" />

                <TextView
                    android:id="@+id/tv_ptnt_frgmnt_vasscale_addvasscale_patntnm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
            <!-- Patient Name -->

            <!--Previous VasScale Date-->
            <LinearLayout
                android:id="@+id/lnrlyot_ptnt_frgmnt_vasscale_addvasscale_prvsdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@color/blue_midnight"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/vasscale_date_coln"
                    android:textColor="@color/yellow_drk"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_ptnt_frgmnt_vasscale_addvasscale_prvsvasdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="06-March-2017" />
            </LinearLayout>
            <!--END Previous VasScale Date-->
        </LinearLayout>
        <!--END Patient name & Previous Date-->

        <!--Daily Payment, Type and Add/Update scale-->
        <LinearLayout
            android:id="@+id/lnrlyot_ptnt_frgmnt_vasscale_addvasscale_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/blue_prmry" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/lnrlyot_ptnt_frgmnt_vasscale_addvasscale_addscale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radiogrp_ptnt_frgmnt_vasscale_addvasscale_dpymnttype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/appcmptradiobtn_ptnt_frgmnt_vasscale_addvasscale_cash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/cs_sml"
                            android:textAllCaps="true" />

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/appcmptradiobtn_ptnt_frgmnt_vasscale_addvasscale_cheque"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cq_sml"
                            android:textAllCaps="true" />
                    </RadioGroup>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_ptnt_frgmnt_vasscale_addvasscale_addscale"
                        style="@style/MaterialButton.Blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/add_sml"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_ptnt_frgmnt_vasscale_addvasscale_dailypymnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_toLeftOf="@id/lnrlyot_ptnt_frgmnt_vasscale_addvasscale_addscale"
                    android:layout_toStartOf="@id/lnrlyot_ptnt_frgmnt_vasscale_addvasscale_addscale"
                    android:ems="10"
                    android:hint="@string/daily_payment"
                    android:inputType="numberDecimal" />
            </RelativeLayout>
        </LinearLayout>
        <!--END Daily Payment, Type and Add/Update scale-->

        <!--Before/After VasScale selection-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/lnrlyot_ptnt_frgmnt_vasscale_addvasscale_bottom"
            android:layout_below="@id/lnrlyot_ptnt_frgmnt_vasscale_addvasscale_top"
            android:weightSum="2"
            android:orientation="vertical">

            <!-- Before VasScale NumberPicker -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgvw_ptnt_frgmnt_vasscale_addvasscale_before"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/imgcd_emojies"
                    android:src="@drawable/emojs_10" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:gravity="center"
                        android:text="@string/before_sml"
                        android:textColor="@color/red_alizarin"
                        android:textSize="25sp" />

                    <NumberPicker
                        android:id="@+id/nmbrpckr_ptnt_frgmnt_vasscale_addvasscale_before"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="end" />

                </RelativeLayout>
            </RelativeLayout>
            <!-- END Before VasScale NumberPicker -->

            <!-- After VasScale NumberPicker -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgvw_ptnt_frgmnt_vasscale_addvasscale_after"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/imgcd_emojies"
                    android:src="@drawable/emojs_09" />

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:gravity="center"
                        android:text="@string/after_sml"
                        android:textColor="@color/trqs_prmry"
                        android:textSize="25sp" />

                    <NumberPicker
                        android:id="@+id/nmbrpckr_ptnt_frgmnt_vasscale_addvasscale_after"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="end" />
                </RelativeLayout>
            </RelativeLayout>
            <!-- END After VasScale NumberPicker -->
        </LinearLayout>
        <!--END Before/After VasScale selection-->
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>